# ir-stats

./: .gitignore  LICENSE  Makefile.am  config.c  config.h  configure.ac  ir-stats.db  ir-stats.ini
etc/: ir-stats.ini
src/: Makefile.am  config.c  config.h  daemonize.c  db.c  db.h  main.c  server.c  server.h
tst/: Makefile.am  config.c  main.c  test.ini
windows/: ir-stats-tcp-sender.py
